[package]
name = "cloudflare-workers-d1-rust-example"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2.11", features = ["js"] }
worker = { version = "0.0.18", features = ["d1"] }
serde_json = "1.0.108"
serde = "1.0.193"
chrono = "0.4.31"

[profile.release]
lto = true
strip = true
codegen-units = 1
